// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component renders properly 1`] = `
<div
  className="modal__overlay"
  onClick={[Function]}
>
  <div
    className="modal__container"
  >
    <header
      className="modal__header"
    >
      <button
        className="linkButton modal__dismiss"
        onClick={[Function]}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/images/app.svg#close-icon"
          />
        </svg>
      </button>
    </header>
    <div
      className="modal__body"
    />
  </div>
</div>
`;

exports[`Modal component renders with children 1`] = `
<div
  className="modal__overlay"
  onClick={[Function]}
>
  <div
    className="modal__container"
  >
    <header
      className="modal__header"
    >
      <button
        className="linkButton modal__dismiss"
        onClick={[Function]}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/images/app.svg#close-icon"
          />
        </svg>
      </button>
    </header>
    <div
      className="modal__body"
    >
      I’m a child element!
    </div>
  </div>
</div>
`;
